--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,16 @@
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
+    <script type="text/javascript">
+        (function() {
+            var trial = document.createElement('script');
+            trial.type = 'text/javascript';
+            trial.async = true;
+            trial.src = 'https://easy.myfonts.net/v2/js?sid=287885(font-family=Core+Sans+C+55+Medium)&sid=287888(font-family=Core+Sans+C+65+Bold)&sid=287897(font-family=Core+Sans+C+25+Extra+Light)&sid=287902(font-family=Core+Sans+C+45+Regular)&key=1HvYnpgJQA';
+            var head = document.getElementsByTagName("head")[0];
+            head.appendChild(trial);
+        })();
+    </script>
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta
       name="viewport"
