Add font for title

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,16 @@
             head.appendChild(trial);
         })();
     </script>
+    <script type="text/javascript">
+        (function() {
+            var trial = document.createElement('script');
+            trial.type = 'text/javascript';
+            trial.async = true;
+            trial.src = 'https://easy.myfonts.net/v2/js?sid=219982(font-family=Intro+Light)&sid=219992(font-family=Intro)&sid=220000(font-family=Intro+Bold)&key=q8anMvhqTI';
+            var head = document.getElementsByTagName("head")[0];
+            head.appendChild(trial);
+        })();
+    </script>
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta
       name="viewport"
