Adding Arrow, new fonts, fix size issue, issue on display right side

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,8 @@
             head.appendChild(trial);
         })();
     </script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+          rel="stylesheet">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta
       name="viewport"
